Resume Link and Text Update

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title> Abhishek - A learner, designer & developer</title>
+        <title> Abhishek - Web and Mobile Application Developer</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="robots" content="index, follow"/>
         <meta name="keywords" content="Abhishek Kumar Gupta, Web Developer, Web Designer, Microsoft Student Partner, Xamarin Student Ambassador,Directi Campus Ambassador, Scrollback Campus Buddy, Firefox Student Ambassador, Microsoft Student Associate, President, Microsoft Students' Club, PES"/>
-        <meta name="description" content="A learner and developer : Abhishek Kumar Gupta is a tech enthusiast, love to learn and develop. A quick learner who loves to take challenges and complete it. "/>
+        <meta name="description" content="Web and Mobile Application Developer : Abhishek Kumar Gupta is a tech enthusiast, love to learn and develop. A quick learner who loves to take challenges and complete it. "/>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css" media="all">
         <link type="text/css" rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/plugins.css" media="screen">
@@ -31,7 +31,7 @@
                             </div>
                             <div class="nav-header-text">
                                 <h2>Abhishek Kumar Gupta</h2>
-                                <h3>Web and Mobile Application Designer &amp Developer</h3>
+                                <h3>Web and Mobile Application Developer</h3>
                             </div>
                         </div>
                         <div class="menu-holder">
@@ -104,14 +104,15 @@
                         <div class="container">
                             <div class="content">
                                 <div class="page-title-bg-holder">
-                                    <h2>Abhishek Kumar Gupta </h2>
+                                    <h2>Abhishek Kumar Gupta </h2>                                     
                                     <div class="clearfix"></div>
-                                    <h4>Web and Mobile application Developer &amp Designer<br><br>
+                                    <br/><h4 style="margin:0px!important;">Web and Mobile Application Developer</h4>
+                                    <!--<h4>Web and Mobile Application Developer
 									Software Engineer @ 42Gears Mobility Systems<br>
 									Former Microsoft Student Partner<br>
 									Former Xamarin Student Ambassador<br>
 									Former Directi Campus Ambassador<br>
-									Former President @ Microsoft Students' Club, PES<br></h4>
+									Former President @ Microsoft Students' Club, PES<br></h4>-->
 									<div class="clearfix"></div>
                                     <a href="#sec3" class="btn flt-l  trans-btn custom-scroll-link transition">My work</a>
                                     <a href="#sec4" class="btn flt-l  wht-btn custom-scroll-link  transition">My resume</a>
@@ -273,7 +274,7 @@
                                 <h2>Some of my works</h2>
                                 <div class="separator"></div>
                                 <div class="clearfix"></div>
-                                <p>Web and Mobile Application Designer & Developer.</p>
+                                <p>Web and Mobile Application Developer.</p>
                                 <a href="http://in.linkedin.com/in/abhiguptame" target="_blank" class="btn clr-btn transition">View all works</a>
                             </div>
                         </div>
@@ -460,7 +461,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <a href="https://drive.google.com/file/d/0B7nc62eNjfwcMWptc0lMWDJsZ0k/view?usp=sharing" target="_blank" class="btn flt-l   clr-btn anim-button       transition"><span>Download resume</span><i class="fa fa-download"></i></a>
+                                    <a href="https://drive.google.com/file/d/0B7nc62eNjfwcTWlBY2NIalZBcTQ/view?usp=sharing" target="_blank" class="btn flt-l   clr-btn anim-button       transition"><span>Download resume</span><i class="fa fa-download"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -1104,7 +1105,7 @@
                             <div class="row">
                                 <div class="col-md-3 ">
                                     <img src="images/img/footericon.png" alt="" >
-                                    <h4>Graphics, Mobile Apps & Websites Design and Development</h4>
+                                    <h4>Web and Mobile Application Development</h4>
                                     <h5>All what you need ... !!!</h5>
                                 </div>
                                 <div class="col-md-9">
