--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
 											<h3 class="big-text">Something <span> About me  </span></h3>
                                             <p>I am Abhishek Kumar Gupta, 
 										Software Engineer at 42Gears Mobility Systems, Bangalore.
-										I have keen interest in current trends and technology. I love playing with photoshop and design.
-										Graphic, Mobile and Web designing and development is my passion.</p>
+										I have keen interest in current trends and technology. I love playing with photoshop.
+                                        Web, Mobile and Game Application Designing & Development is my passion.
+										</p>
                                         </div>
                                     </div>
                                     <div class="row align-text">
