--- a/index.html
+++ b/index.html
@@ -132,10 +132,9 @@
                                     <div class="row align-text">
                                         <div class="col-md-12">
 											<h3 class="big-text">Something <span> About me  </span></h3>
-                                            <p>I am Abhishek Kumar Gupta, 
-										Software Engineer at 42Gears Mobility Systems, Bangalore.
-										I have keen interest in current trends and technology. I love playing with photoshop.
-                                        Web, Mobile and Game Application Designing & Development is my passion.
+                                            <p>Hi! I am Abhishek, I enjoy being challenged and working on projects that
+                                                 require me to work outside my comfort and knowledge set, as continuing to learn 
+                                                 new languages and development techniques are important to me.
 										</p>
                                         </div>
                                     </div>
@@ -147,7 +146,7 @@
                                     </div>
                                      <div class="row align-text">
                                         <div class="col-md-12">
-                                            <h3 class="big-text">My <span>Message</span></h3>
+                                           <h3 class="big-text">My <span>Message</span></h3>
                                             <p>My life is my message.</p>
                                         </div>
                                     </div>
@@ -367,7 +366,7 @@
                                 <div class="section-title">
                                     <h2>Resume</h2>
                                     <span class="separator"></span>
-                                    <p>A learner, designer & developer.</p>
+                                    <p>Web and Mobile Application Developer</p>
                                 </div>
                                 <div class="resume-alt">
                                     <!-- copy code  -->
