--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>     
        
         <meta charset="UTF-8">
-        <title> Abhishek - a learner, designer & developer</title>
+        <title> Abhishek - Web and Mobile Application Developer </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="robots" content="index, follow"/>
         <meta name="keywords" content="Abhishek Kumar Gupta, Web Developer, Web Designer, Microsoft Student Partner, Xamarin Student Ambassador,Directi Campus Ambassador, Scrollback Campus Buddy, Firefox Student Ambassador, Microsoft Student Associate, President, Microsoft Students' Club, PES"/>
@@ -33,7 +33,7 @@
                             </div>
                             <div class="nav-header-text">
                                 <h2>Abhishek Kumar Gupta</h2>
-                                <h3>Web and Mobile Application Developer &amp Designer</h3>
+                                <h3>Web and Mobile Application Developer</h3>
                             </div>
                         </div>
                         <div class="menu-holder">
@@ -63,6 +63,7 @@
                                     <li><a href="http://www.twitter.com/abhiguptame"  target="_blank" class="transition"><i class="fa fa-twitter"></i></a></li>
                                     <li><a href="http://in.linkedin.com/in/abhiguptame"  target="_blank" class="transition"><i class="fa fa-linkedin"></i></a></li>
                                     <li><a href="http://plus.google.com/+AbhishekKumarGupta/"  target="_blank" class="transition"><i class="fa fa-google"></i></a></li>
+                                    <li><a href="http://www.github.com/abhiguptame" trget="_blank" class="transition"><i class="fa fa-github"></i></a></li> 
                                 </ul>
                             </div>
                         </div>
@@ -114,8 +115,8 @@
                                         <div class="clearfix"></div>
                                         <div class="separator color-separator flt-l"></div>
                                         <div class="clearfix"></div>
-                                        <h4 class="big-text">I am <span>Abhishek Kumar Gupta</span>, love to <span>learn, develop and share.</span>  </h4>
-                                        <p>I am Software Engineer at 42Gears Mobility Systems, Bengaluru.</p>
+                                        <h4 class="big-text">I am <span>Abhishek</span>, love to <span>learn, develop and share.</span>  </h4>
+                                        <p>Web and Mobile Application Developer</p>
                                     </div>
                                     <div class="col-lg-4">
                                         <h3>Details</h3>
@@ -133,7 +134,7 @@
                                             </li>
                                             <li>
                                                 <i class="fa fa-skype"></i> 
-                                                <a href="skype:yournik?chat"  class="transition">abhiguptame</a>
+                                                <a href="skype:yournik?chat"  class="transition">abhiguptame@hotmail.com</a>
                                             </li>
 											 <li>
                                                 <i class="fa fa-linkedin"></i>
@@ -212,7 +213,8 @@
                                                 <li><a href="http://www.twitter.com/abhiguptame" target="_blank" class="transition"><i class="fa fa-twitter"></i></a></li>
                                                 <li><a href="http://in.linkedin.com/in/abhiguptame"  target="_blank" class="transition"><i class="fa fa-linkedin"></i></a></li>
 												<li><a href="http://plus.google.com/+AbhishekKumarGupta/"  target="_blank" class="transition"><i class="fa fa-google"></i></a></li>
-                                            </ul>
+                                                <li><a href="http://www.github.com/abhiguptame" trget="_blank" class="transition"><i class="fa fa-github"></i></a></li> 
+                                           </ul>
                                         </div>
                                     </div>
                                 </div>
@@ -225,7 +227,7 @@
                             <div class="row">
                                 <div class="col-md-3 ">
                                     <img src="images/img/footericon.png" alt="" >
-                                    <h4>Graphics, Mobile Apps & Websites Design and Development</h4>
+                                    <h4>Web and Mobile Application Development</h4>
                                     <h5>All what you need ... !!!</h5>
                                 </div>
                                 <div class="col-md-9">
