--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
                             </div>
                         </div>
                         <div class="content align-text">
-                            <div class="ms-grid-items   mas-posts">
+                            <div class="ms-grid-items   mas-posts column3-grid">
                                 <div class="grid-sizer-three"></div>
                                 <!-- GitHub Tech Talk Quinix -->
                                 <div class="box ms-grid-item">
@@ -962,7 +962,7 @@
                               <div class=" container">
                             <div class="section-title align-text">
                                 <div class="row">
-                                    <div class="col-md-8 ">
+                                    <div class="col-md-8">
                                         <h2>Some of my Certifications</h2>
                                         <div class="clearfix"></div>
                                         <div class="separator color-separator flt-l"></div>
