Updated Code View

--- a/index.html
+++ b/index.html
@@ -1504,13 +1504,20 @@
                                                 </div>
                                                 <div class="services-box-info">
                                                     <h4>How to reformat date using JavaScript?</h4>
-                                                     <p>Use the following functions:</p>                                                                                                    
-                                                    <ul>
-                                                       <li> function reformatDate(dateStr) {</li>
-                                                        <li>var dArr = dateStr.split("/");</li>
-                                                        <li>return dArr[2] + "-" + dArr[0] + "-" + dArr[1];</li>
-                                                        <li> } </li>
-                                                    </ul>   
+                                                     <p>Use the following functions:</p>
+                                                      <pre style="font-family: Andale Mono, Lucida Console, Monaco, fixed, monospace; 
+                color: #000000; background-color: #eee;
+                font-size: 12px; border: 1px dashed #999999;
+                line-height: 14px; padding: 5px; 
+                overflow: auto; width: 100%">
+       <code style="color:#000000;word-wrap:normal;">
+        function reformatDate(dateStr) {
+            var dArr = dateStr.split("/");
+            return dArr[2] + "-" + dArr[0] + "-" + dArr[1];
+            }
+       </code>
+ </pre>                                                                                                   
+
                                                     <p></p>                                                
                                                 </div>
                                             </div>
