--- a/index.html
+++ b/index.html
@@ -1504,7 +1504,7 @@
                                                 </div>
                                                 <div class="services-box-info">
                                                     <h4>How to reformat date using JavaScript?</h4>
-                                                     <p>Use the following functions:</p>
+                                                     <p>Use the following functions:</p><br/>
                                                       <pre style="font-family: Andale Mono, Lucida Console, Monaco, fixed, monospace; 
                 color: #000000; background-color: #eee;
                 font-size: 12px; border: 1px dashed #999999;
