--- a/index.html
+++ b/index.html
@@ -1466,7 +1466,33 @@
                                     </div>
                                     <div id="services-carusel" class="owl-carousel">
 
-                                         <!-- 1 item -->
+                                         <!-- 3 item -->
+                                        <div class="item">
+                                            <div class="services-box box-item-holder">
+                                                <div class="services-image box-item bl-over">
+                                                    <div class="box-item-med">
+                                                        <img src="images/til/copytextfromiealert.PNG" alt="" class="respimg">
+                                                        <div class="overlay"></div>
+                                                    </div>
+                                                    <div class="box-links">
+                                                        <a href="images/til/copytextfromiealert.PNG" class="image-popup lin-h"><i class="fa fa-plus"></i></a>
+                                                    </div>
+                                                </div>
+                                                <div class="services-box-info">
+                                                    <h4>How to copy message from alert box in IE and EDGE Browser?</h4>
+                                                    <p>To copy message from alert box in IE or EDGE browser, follow the steps below:</p>                                                   
+                                                    <ul>
+                                                        <li>1.) When AlertBox in focus ( alertbox opened ), press CTRL+C in your keyboard</li>
+                                                        <li>(It will copy the message in clipboard.)</li>
+                                                        <li>2.) Paste (CTRL+V) to the your favourite text editor.</li>
+                                                        <li>(Now, You can copy the message from Text editor.)</li>
+                                                    </ul>   
+                                                    <p></p>                                                
+                                                </div>
+                                            </div>
+                                        </div>             
+
+                                         <!-- 2 item -->
                                         <div class="item">
                                             <div class="services-box box-item-holder">
                                                 <div class="services-image box-item bl-over">
@@ -1489,7 +1515,7 @@
                                                 </div>
                                             </div>
                                         </div>                                      
-                                        <!-- 2 item -->
+                                        <!-- 1 item -->
 
                                          <div class="item">
                                             <div class="services-box box-item-holder">
@@ -1505,12 +1531,18 @@
                                                 <div class="services-box-info">
                                                     <h4>How to reformat date using JavaScript?</h4>
                                                      <p>Use the following functions:</p><br/>
-                                                      <pre style="font-family: Andale Mono, Lucida Console, Monaco, fixed, monospace; 
+                                                      <pre style="cursor:text!important;font-family: Andale Mono, Lucida Console, Monaco, fixed, monospace; 
                 color: #000000; background-color: #eee;
                 font-size: 12px; border: 1px dashed #999999;
                 line-height: 14px; padding: 5px; 
                 overflow: auto; width: 100%">
-       <code style="color:#000000;word-wrap:normal;">
+       <code style="color:#000000;word-wrap:normal;cursor:text!important; 
+   -moz-user-select: text!important;
+   -khtml-user-select: auto!important;
+   -webkit-user-select: auto!important;
+   -ms-user-select: auto!important;
+   user-select: auto!important;
+ ">
         function reformatDate(dateStr) {
             var dArr = dateStr.split("/");
             return dArr[2] + "-" + dArr[0] + "-" + dArr[1];
