Update TIL image  format

--- a/index.html
+++ b/index.html
@@ -1471,11 +1471,11 @@
                                             <div class="services-box box-item-holder">
                                                 <div class="services-image box-item bl-over">
                                                     <div class="box-item-med">
-                                                        <img src="images/til/copytextfromiealert.PNG" alt="" class="respimg">
+                                                        <img src="images/til/copytextfromiealert.png" alt="" class="respimg">
                                                         <div class="overlay"></div>
                                                     </div>
                                                     <div class="box-links">
-                                                        <a href="images/til/copytextfromiealert.PNG" class="image-popup lin-h"><i class="fa fa-plus"></i></a>
+                                                        <a href="images/til/copytextfromiealert.png" class="image-popup lin-h"><i class="fa fa-plus"></i></a>
                                                     </div>
                                                 </div>
                                                 <div class="services-box-info">
