--- a/index.html
+++ b/index.html
@@ -1592,6 +1592,10 @@
                                 </div>
                                 <div class="testimonilas-holder">
                                     <div id="testimonials-slider" class="owl-carousel test-carousel">
+					    <div class="item">
+                                            <p>Heart... is my inspiration. No matter what happen to it, it just go on.</p>
+                                            <h4><span></span></h4>                                            
+                                        </div>
                                         <div class="item">
                                             <p>"Tension and Pension, you should take after retirement."</p>
                                             <h4><span></span></h4>                                            
@@ -1644,7 +1648,7 @@
                                         <h3>Get in Touch</h3>
                                         <div class="contact-info">
                                             <ul>
-                                                <li><a href="#" target="_blank" class="ci-adress">Indiranagar <br> Bangalore - 560008</a></li>
+                                                <li><a href="#" target="_blank" class="ci-adress">BTM 1st Stage <br> Bangalore - 560008</a></li>
                                                 <li><a href="#" target="_blank" class="ci-mail"> abhiguptame@gmail.com</a></li>
                                                 <li> <a href="#" target="_blank" class="ci-phone">  +91 - 9480271094 </a></li>
                                             </ul>
