Adding My Quote

--- a/index.html
+++ b/index.html
@@ -1593,6 +1593,10 @@
                                 <div class="testimonilas-holder">
                                     <div id="testimonials-slider" class="owl-carousel test-carousel">
 					    <div class="item">
+                                            <p>"Have breakfast till its morning."</p>
+                                            <h4><span></span></h4>                                            
+                                        </div>
+					    <div class="item">
                                             <p>Heart... is my inspiration. No matter what happen to it, it just go on.</p>
                                             <h4><span></span></h4>                                            
                                         </div>
