--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/color.css">
         <link rel="shortcut icon" href="images/img/favicon.png">
-	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
     </head>
     <body>
         <div id="main">
