Removing Scroll Link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <nav class="scroll-nav">
                                     <ul>
                                         <li class="actscroll"><a class="scroll-link" href="#sec1">Home </a></li>
-                                        <li><a class="scroll-link" href="#sec2">About</a></li>
+                                        <li><a href="#sec2">About</a></li>
                                         <!--<li><a class="scroll-link" href="#sec3">Works</a></li>
                                         <li><a class="scroll-link" href="#sec4">Resume</a></li>-->
                                         <li><a class="scroll-link" href="#sec5">Skills</a></li>										
